Add mark and unmark feature